fixed the registration inputs' alignment

--- a/kubanex_website/forum/static/forum/style.css
+++ b/kubanex_website/forum/static/forum/style.css
@@ -137,6 +137,7 @@ footer p {
 
 .form-group {
   margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 .form-group label {
